# StreamForge-Project

./: .gitignore  README.md  create_structure.ps1  requirements.txt  setup_kafka.ps1
consumer/: consumer.py
docker/: docker-compose.yml
docs/architecture/: aggregation_engine_testing.md  aggregation_update_api.md  average_temperature_calculation.md  configuration_system.md  create_state_operation.md  crud_operations_testing.md  database_initialization.md  database_manager.md  default_state_creation.md  delete_state_operation.md  event_count_aggregation.md  (+26 more)
processor/: README.md  agents.py  app.py  config.py  faust_app.py  models.py  requirements.txt  rocksdb_integration_app.py  topic.py  topics.py
producer/: producer.py
rocksdb_state/: .gitignore  pyproject.toml  requirements.txt
rocksdb_state/config/: __init__.py  config.py
rocksdb_state/database/: __init__.py  database_manager.py  initializer.py
rocksdb_state/health/: __init__.py  health_check.py
rocksdb_state/logging/: logger.py
rocksdb_state/rocksdb_state/aggregation/: aggregator.py
rocksdb_state/rocksdb_state/database/: database_manager.py
rocksdb_state/rocksdb_state/exceptions/: exceptions.py
rocksdb_state/rocksdb_state/models/: truck_state.py
rocksdb_state/rocksdb_state/recovery/: recovery_manager.py
rocksdb_state/rocksdb_state/serialization/: deserializer.py  serializer.py
rocksdb_state/rocksdb_state/storage/: crud.py  key_manager.py
rocksdb_state/scripts/: run_simulation.py
rocksdb_state/streamforge_rocksdb_state.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
